k8s/task-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager
  namespace: task-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: task-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: task-manager
        app.kubernetes.io/component: full-stack
        app.kubernetes.io/instance: task-manager
    spec:
      containers:
        - name: task-manager
          image: scophee/taskapi:1.1.0
          resources:
            limits:
              memory: '128Mi'
            requests:
              memory: '128Mi'
              cpu: '250m'
          ports:
            - containerPort: 5500
