k8s/task-manager-ingress-ctl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  namespace: task-manager
spec:
  ingressClassName: nginx
  rules:
    # - host: <Host>
    - http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: task-manager
                port:
                  number: 5500
